<resources>
    <string name="app_name">YToddler</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="Login">Login</string>
    <string name="Don_t_have_account_Sign_Up">"Don't have account? Sign Up"</string>
    <string name="ForgotPassword">"Forgot password?"</string>
    <string name="Sign_up">Sign up</string>
    <string name="Already_have_an_account_Login">Already have an account? Login</string>
    <string name="Timer">Timer</string>
    <string name="Languages">Languages</string>
    <string name="About">About</string>
    <string name="Logout">Logout</string>
    <string name="Download_This_Video">Download This Video</string>
    <string name="Minutes">Minutes</string>
    <string name="Set">Set</string>
    <string name="Zeroes" translatable="false">00:00</string>
    <string name="start">start</string>
    <string name="reset">reset</string>
    <string name="Logo_Description">Logo Description</string>

    <string name="login_with_google">LOGIN WITH GOOGLE</string>
    <string name="login_with_facebook">LOGIN WITH FACEBOOK</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="PauseTimer">Pause</string>
    <string name="StartTimer">Start</string>

    <string name="searchMenu">Search...</string>
    <string name="englishMenu" translatable="false">English</string>
    <string name="germanMenu" translatable="false">Deutsch</string>
    <string name="polishMenu" translatable="false">Polski</string>
    <string name="chineseMenu" translatable="false">中文</string>

    <string name="nav_header_title" translatable="false">0:00</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="four_button">2-4 years old</string>
    <string name="seven_button">4-7 years old</string>
    <string name="ten_button">7-10 years old</string>

    <string name="channel">Channel</string>
    <string name="playlist">Playlist</string>
    <string name="live">Live</string>
    <string name="title_activity_custom_playlist" translatable="false">CustomPlaylistActivity</string>

    <string name="about">This application has been designed and implemented by \nKrzysztof Gómułka \nas a diploma thesis project. The application is likely to be one of the best methods of providing safe YouTube content\nfor kids as well as good entertainment.</string>

    <string name="other_account">Other account</string>
    <string name="login_condition">"In order to log in \nchoose account"</string>

</resources>
