<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_red"
    tools:context="com.abc.ytoddler.TimerActivity">

    <EditText
        android:id="@+id/edit_text_input"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_view_countdown"
        android:layout_centerHorizontal="true"
        android:hint="@string/Minutes"
        android:textColorHint="@color/white_50_percent_opacity"
        android:textColor="@android:color/white"
        android:inputType="number"
        android:maxLength="4" />

    <Button
        android:id="@+id/button_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/edit_text_input"
        android:layout_marginStart="-209dp"
        android:layout_marginTop="189dp"
        android:layout_toEndOf="@+id/edit_text_input"
        android:background="@drawable/round_bg"
        android:text="@string/Set" />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/Zeroes"
        android:textColor="@android:color/white"
        android:textSize="60sp" />

    <Button
        android:id="@+id/button_start_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_countdown"
        android:layout_marginStart="16dp"
        android:layout_marginTop="63dp"
        android:layout_toEndOf="@+id/button_set"
        android:background="@drawable/round_bg"
        android:text="@string/start" />


    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_countdown"
        android:layout_marginStart="119dp"
        android:layout_marginTop="63dp"
        android:layout_marginLeft="70dp"
        android:layout_toEndOf="@+id/button_set"
        android:background="@drawable/round_bg"
        android:text="@string/reset"
        android:visibility="invisible"
        tools:visibility="visible" />

</RelativeLayout>